--- a/blog-tutorial/tsconfig.json
+++ b/blog-tutorial/tsconfig.json
@@ -9,9 +9,12 @@
     "jsx": "react-jsx",
     "module": "CommonJS",
     "moduleResolution": "node",
+    "noImplicitAny": true,
+    "noImplicitThis": true,
     "resolveJsonModule": true,
     "target": "ES2019",
     "strict": true,
+    "strictNullChecks": true,
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
